# fastapi-template

./: .env.example  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  rebuild-local.sh
.github/workflows/: codeql-analysis.yml  secretsscanning.yml
web/: __init__.py
web/auth/: auth_bearer.py  auth_handler.py
web/database/: __init__.py
web/database/crud/: __init__.py  token.py  user.py
web/database/models/: __init__.py  token.py  user.py
web/database/schemas/: __init__.py  token.py  user.py
web/graph_database/: __init__.py
web/graph_database/models/: person.py  system.py
web/routers/: auth.py  graph.py  user.py
